--- a/public/scss/partials/_page-resa.scss
+++ b/public/scss/partials/_page-resa.scss
@@ -3,12 +3,14 @@
 ////////////////////////////////*/
 #content.reservation {
     padding-bottom: 50px;
+    background-color: white;
     @media screen and (max-width: $screen-xs-max) {
         padding-left: 0;
+        padding-right: 0;
     }
     .breadcrumb {
-        // padding-left: 15px;
         margin-bottom: 15px;
+        background-color: white;
         @media screen and (max-width: $screen-xs-max) {
             padding-left: 15px;
         }
@@ -60,6 +62,10 @@
                         background: url(../img/icons/localisation-red.svg) no-repeat center left;
                         background-size: contain;
                     }
+                }
+                .phone {
+                    display: block;
+                    font-size: 1.4em;
                 }
             }
         }
@@ -180,14 +186,20 @@
                     color: $font-color;
                     margin: 20px 0;
                     letter-spacing: 0;
+                    @media screen and (max-width: $screen-xs-max) {
+                        margin-left: 15px;
+                    }
                 }
                 td {
                     width: 50px;
+                    @media screen and (max-width: $screen-xs-max) {
+                        width: calc(100% / 7);
+                    }
                 }
             }
+            
             > div:nth-child(1) {
                 @media screen and (max-width: 545px) {
-                    // float: none !important;
                     width: 100%;
                 }
             }
@@ -203,13 +215,12 @@
                     padding-left: 15px;
                 }
                 @media screen and (max-width: 545px) {
-                    // float: none !important;
                     width: 100%;
                 }
                 .time-table table {
                     width: 100%;
                     @media screen and (max-width: $screen-sm-max) {
-                        margin-right: -50px;
+                        // margin-right: -50px;
                     }
                     tbody {
                         display: block;
@@ -218,6 +229,9 @@
                         width: 100%;
                         @media screen and (max-width: $screen-sm-max) {
                             margin-right: -50px;
+                        }
+                        @media screen and (max-width: $screen-xs-max) {
+                            margin-left: 10px;
                         }
                     }
 
@@ -230,7 +244,6 @@
                         float: left;
                         border:1px solid #e5e5e5;
                         border-radius: 2px;
-                        // text-align: center;
                         margin: 0 10px 10px 0;
 
                         a {
@@ -247,9 +260,6 @@
                         }
 
                         p {
-                            // position: absolute;
-                            // top: 6px;
-                            // width: 100%;
                             font-size: 1em;
                         }
 
@@ -294,7 +304,6 @@
                     border-radius: 0;
                     height: 50px;
                     width: 300px;
-                    // border: 0px;
                 }
                 input[name="userEmail"], 
                 input[name="userFirstName"],
@@ -365,6 +374,9 @@
                     > span {
                         font-weight: $light;
                     }
+                    @media screen and (max-width: $screen-xs-max) {
+                        margin-right: auto;
+                    }
                 }
             }
             .form-end {
@@ -372,6 +384,12 @@
                 @include flex-direction(column);
                 @include align-items(flex-start);
                 margin-bottom: 20px;
+                @media screen and (max-width: $screen-xs-max) {
+                    margin-left: 20px;
+                }
+                label {
+                    font-weight: $light;
+                }
             }
             .btn-red {
                 @include flexbox;
@@ -403,9 +421,6 @@
         text-decoration: underline;
         margin-top: -2em;
         &:hover, &:active {color: $font-color}
-        @media screen and (max-width: $screen-xs-max) {
-            // float: none !important;
-        }
     }
     .confirm-bloc-form {
         p {
@@ -427,7 +442,6 @@
             color: white;
             font-size: 1.4em;
             margin-top: 20px;
-            //#gradient@include vertical(#5973aa; #425f9c;);
             @include gradient-vertical(#5973aa, #425f9c);
 
             &:hover, &:active {text-decoration: none;}
@@ -566,9 +580,20 @@
 }
 
 #content.reservation.confirmation {
+    min-height: 400px;
+    @media screen and (max-width: $screen-xs-max) {
+        @include flexbox;
+        @include flex-direction(column);
+        .booking-summary {
+            @include order(2);
+            padding-top: 20px;
+            border-top: 1px solid $grey2;
+        }
+    }
     .row {
         .legend {
             padding-top: 20px;
+            padding-left: 15px;
             h3 {
                 letter-spacing: 0;
                 font-size: 1.6em;
@@ -579,6 +604,10 @@
                 font-size: 1.2em;
                 font-weight: $light;
             }
+        }
+        input[type="text"] {
+            height: 50px;
+            border-radius: 0;
         }
         input.registration {
             width: 60%;
