--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -980,4 +980,7 @@ div.shadow {
 
 .bg-white {
     background-color: white;
+    header.white.hidden-xs {
+        @include box-shadow (0 -2px 12px $grey);
+    }
 }
